--- a/index.html
+++ b/index.html
@@ -4,9 +4,232 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Car Booking</title>
+    <title>Car Booking</title>	
+    <link rel="shortcut icon" href="assets/logo.jpg">
+	<link rel="stylesheet" href="bootstrap-4.1.3-dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/animate.css">
+	<link rel="stylesheet" href="css/arrow.css">
+	<link rel="stylesheet" href="css/fixed.css">
+	<link rel="stylesheet" href="css/lightbox.css">
+	<link rel="stylesheet" href="css/owl.carousel.css">
+	<link rel="stylesheet" href="css/owl.theme.default.css">
+    <link rel="stylesheet" href="css/waypoints.css">    
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+
+<!--  HOME  -->
+<div id="home">
+
+
+<!-- NAVIGATION  -->
+<div id="nav">
+    <div class="container">
+        <nav class="navbar navbar-expand-lg fixed-top navbar-dark">
+            <div class="container-fluid">
+                <a href="#" class="navbar-brand"><img src="assets/logo.jpg" alt="LOGO" style="height: 32px;">CAR BOOKING</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+                    <span class="navbar-toggler-icon"> <i class="fas fa-bars"></i> </span>
+                </button>
+                <div class="collape navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a href="#home" class="nav-link">HOME</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#contact" class="nav-link">CONTACT</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#about" class="nav-link">ABOUT</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#feedback" class="nav-link">FEEDBACK</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#login" class="nav-link">LOGIN</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </div>
+</div>
+
+<div id="procedure" class="offset">
+    <img src="assets/truck.jpg" alt="Truck Image" width="100%">
+</div>
+<!--  END NAVIGATION -->
+
+
+
+<!--  PROCEDURE  -->
+<div id="procedure" class="procedure offset">
+    <div class="container">
+        <div class="text-center">
+            <h1>Procedure</h1>
+            <div class="row">
+                <div class="col col-md-3  col-sm-12 col-xs-12 procedure-container">
+                    <div class="img-container">
+                        <img src="assets/wdl-icon1.png" alt="Location" height="60px">
+                    </div>
+                    <div class="text-container">
+                        <h5>Enter the Pick-Up & Destination Location</h5>
+                    </div>
+                </div>
+                <div class="col col-md-3  col-sm-12 col-xs-12 procedure-container">
+                    <div class="img-container">
+                        <img src="assets/wdl-icon2.png" alt="Location" height="60px">
+                    </div>
+                    <div class="text-container">
+                        <h5>Payment</h5>
+                    </div>
+                </div>
+                <div class="col col-md-3 col-sm-12 col-xs-12 procedure-container">
+                    <div class="img-container">
+                        <img src="assets/wdl-icon1.png" alt="Location" height="60px">
+                    </div>
+                    <div class="text-container">
+                        <h5>Track Your Goods</h5>
+                    </div>
+                </div>
+                <div class="col col-md-3 col-sm-12 col-xs-12 procedure-container">
+                    <div class="img-container">
+                        <img src="assets/wdl-icon3.png" alt="Location" height="60px">
+                    </div>
+                    <div class="text-container">
+                        <h5>Get Your Goods Delivered</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!--  PROCEDURE END -->
+
+
+
+<!--  PARALLEX WALLPAPER  -->
+<div id="parallex" class="offset">
+    <img src="assets/wdl-image24.jpg" alt="Car Booking" width="100%">
+</div>
+<!--  PARALLEX WALLPAPER END -->
+
+
+
+<!--  SERVICES  -->
+<div id="services" class="service offset" style="padding-bottom: 60px;">
+    <div class="container">
+        <div class="text-center">
+
+            <div class="row" style="color:#EEEEEE">
+                <div class="col col-md-4  col-sm-12 col-xs-12 service-container">
+                    <div class="">
+                        <img src="assets/wdl-icon4.png" alt="Location" height="60px">
+                    </div>
+                    <div class="text-container">
+                        <h5>24/7 Customer Support</h5>
+                    </div>
+                    <div class="text-container" style="margin-top: 10px;">
+                        <h6>A dedicated 24x7 customer support team always at your service to help solve any problem</h6>   
+                    </div>
+                </div>
+                <div class="col col-md-4  col-sm-12 col-xs-12 service-container">
+                    <div class="">
+                        <img src="assets/wdl-icon5.png" alt="Location" height="60px">
+                    </div>
+                    <div class="text-container">
+                        <h5>Your Goods Safety First</h5>
+                    </div>
+                    <div class="text-container "style="margin-top: 10px;">
+                        <h6>Sit back and relax while we diliver your items safely at the destination</h6>   
+                    </div>
+                </div>
+                <div class="col col-md-4  col-sm-12 col-xs-12 service-container">
+                    <div class="">
+                        <img src="assets/wdl-icon6.png" alt="Location" height="60px">
+                    </div>
+                    <div class="text-container">
+                        <h5>Top Rated Driver-Partners</h5>
+                    </div>
+                    <div class="text-container" style="margin-top: 10px;">
+                        <h6>All our driver-partners are background verified and trained to deliver only the best experience</h6>   
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!--  SERVICES END -->
+
+
+
+<!--  COUNTER  -->
+<div id="mobileapp" class="offset" style="background-color:#00ADB5; padding-bottom: 80px;">
+    <div class="container">
+        <div class="text-center">
+            <div class="row" style="color:#EEEEEE">
+                <div class="col col-md-4  col-sm-12 col-xs-12 counter-container">
+                    <div class="text-container">
+                        <h1>890</h1>
+                    </div>
+                    <div class="text-container" style="margin-top: 10px;">
+                        <h6>Happy Client</h6>   
+                    </div>
+                </div>
+                <div class="col col-md-4  col-sm-12 col-xs-12 counter-container">
+                    <div class="text-container">
+                        <h1>675</h1>
+                    </div>
+                    <div class="text-container "style="margin-top: 10px;">
+                        <h6>Total Cars</h6>   
+                    </div>
+                </div>
+                <div class="col col-md-4  col-sm-12 col-xs-12 counter-container">
+                    <div class="text-container">
+                        <h1>2</h1>
+                    </div>
+                    <div class="text-container" style="margin-top: 10px;">
+                        <h6>Tatal Cities</h6>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!--  COUNTER END -->
+
+
+
+<!--  WEB DEVELOPER  -->
+<div id="developer" class="offset">
+    Developer
+</div>
+<!--  WEB DEVELOPER END -->
+
+
+
+<!--  FOOTER  -->
+<div id="footer" class="offset">
+    Footer
+</div>
+<!--  FOOTER END -->
+
+</div>
+<!--  HOME END -->
+
+
 </body>
+<!--- Script Source Files -->
+<script src="js/jquery-3.3.1.min.js"></script>
+<script src="https://use.fontawesome.com/releases/v5.4.2/js/all.js"></script>
+<script src="bootstrap-4.1.3-dist/js/bootstrap.min.js"></script>
+<script src="js/contact.js"></script>
+<script src="js/custom.js"></script>
+<script src="js/jquery.counterup.js"></script>
+<script src="js/jquery.waypoints.min.js"></script>
+<script src="js/lightbox.js"></script>
+<script src="js/owl.carousel.js"></script>
+<script src="js/validator.js"></script>
+<script src="js/waypoints.js"></script>
+<!--- End of Script Source Files -->
 </html>
