--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Car Booking</title>	
-    <link rel="shortcut icon" href="assets/logo.jpg">
+    <link rel="shortcut icon" href="assets/logo.jpeg">
 	<link rel="stylesheet" href="bootstrap-4.1.3-dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/animate.css">
 	<link rel="stylesheet" href="css/arrow.css">
@@ -27,7 +27,7 @@
     <div class="container">
         <nav class="navbar navbar-expand-lg fixed-top navbar-dark">
             <div class="container-fluid">
-                <a href="#" class="navbar-brand"><img src="assets/logo.jpg" alt="LOGO" style="height: 32px;">CAR BOOKING</a>
+                <a href="#" class="navbar-brand"><img src="assets/logo.jpeg" alt="LOGO" style="height: 32px;">CAR BOOKING</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
                     <span class="navbar-toggler-icon"> <i class="fas fa-bars"></i> </span>
                 </button>
@@ -117,7 +117,7 @@
 
 
 <!--  SERVICES  -->
-<div id="services" class="service offset" style="padding-bottom: 60px;">
+<div id="services" class="service offset" style="padding-bottom: 10px;">
     <div class="container">
         <div class="text-center">
 
@@ -164,31 +164,31 @@
 
 
 <!--  COUNTER  -->
-<div id="mobileapp" class="offset" style="background-color:#00ADB5; padding-bottom: 80px;">
+<div id="mobileapp" class="offset" style="background-color:#00ADB5; padding-top: 90px; padding-bottom: 120px;">
     <div class="container">
         <div class="text-center">
-            <div class="row" style="color:#EEEEEE">
+            <div class="row" style="color:#222831">
                 <div class="col col-md-4  col-sm-12 col-xs-12 counter-container">
-                    <div class="text-container">
+                    <div class="text-container" style="margin-top:0px;">
                         <h1>890</h1>
                     </div>
-                    <div class="text-container" style="margin-top: 10px;">
+                    <div class="text-container" >
                         <h6>Happy Client</h6>   
                     </div>
                 </div>
                 <div class="col col-md-4  col-sm-12 col-xs-12 counter-container">
-                    <div class="text-container">
+                    <div class="text-container" style="margin-top:0px;">
                         <h1>675</h1>
                     </div>
-                    <div class="text-container "style="margin-top: 10px;">
+                    <div class="text-container">
                         <h6>Total Cars</h6>   
                     </div>
                 </div>
                 <div class="col col-md-4  col-sm-12 col-xs-12 counter-container">
-                    <div class="text-container">
+                    <div class="text-container" style="margin-top:0px;">
                         <h1>2</h1>
                     </div>
-                    <div class="text-container" style="margin-top: 10px;">
+                    <div class="text-container">
                         <h6>Tatal Cities</h6>
                     </div>
                 </div>
@@ -199,10 +199,55 @@
 <!--  COUNTER END -->
 
 
+<!--  MOBILE APP  -->
+<div id="mobile" class="offset" style="background-color: white; padding-left: 40px;">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col col-md-6" >
+                <h1>Download The App Now</h1>
+            </div>
+            <div class="col col-md-6">
+                <img src="assets/wdl-image2.jpg" alt="Mobile App" height="350px">
+            </div>
+        </div>
+    </div>
+</div>
+<!--  MOBILE APP END -->
+
+
 
 <!--  WEB DEVELOPER  -->
-<div id="developer" class="offset">
-    Developer
+<div id="developer" class="offset" style="margin-top:50px; margin-bottom: 40px;">
+    <div class="container">
+        <div class="text-center">
+            <h1 style="font-weight: 700; margin-bottom: 20px; color:#eeee;">Website Developers</h1>
+            <div class="row">
+                <div class="col col-md-4  col-sm-12 col-xs-12 procedure-container">
+                    <div class="developer-left">
+                        <p>ZAPY</p>
+                        <p>Full Stack Developer</p>
+                        <p>React Html CSS Javascript PHP Node Java</p>
+                        <p>MySQL MongoDB Redis Firebase</p>
+                    </div>
+                </div>
+                <div class="col col-md-4  col-sm-12 col-xs-12 procedure-container">
+                    <div class="developer-img">
+                        <img src="assets/wdl-image25.jpg" alt="Location" height="200px" width="200px">
+                    </div>
+                </div>
+                <div class="col col-md-4 col-sm-12 col-xs-12 procedure-container">
+                    <div class="developer-right" style="font-size: 14px">
+                        <p>Instagram:: @___zapy____</p>
+                        <p>Facebook:: facebook.com/zapywho</p>
+                        <p>Github:: @ZapySolo</p>
+                        <p>LinkedIN:: https://www.linkedin.com/in/zapywho/</p>          
+                        <p>Website:: @zapy.website.in</p>
+                    </div>
+                </div>
+            </div>
+            <div style="color:#818489; font-weight: 100;">nrpatil@yahoo.com | 7774072857</div>
+        </div>
+    </div>
 </div>
 <!--  WEB DEVELOPER END -->
 
@@ -210,7 +255,13 @@
 
 <!--  FOOTER  -->
 <div id="footer" class="offset">
-    Footer
+    <div class="contaier-fluid" style="background-color: black; height:200px;">
+        <div class="row">
+            <div class="col col-md-12">
+                <div class="footer"><p>© 2019 Car Booking, Inc.</p> </div>
+            </div>
+        </div>
+    </div>
 </div>
 <!--  FOOTER END -->
 
