--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
                             <a href="#home" class="nav-link">HOME</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#contact" class="nav-link">CONTACT</a>
+                            <a href="#developer" class="nav-link">CONTACT</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#about" class="nav-link">ABOUT</a>
+                            <a href="#procedure" class="nav-link">ABOUT</a>
                         </li>
                         <li class="nav-item">
                             <a href="#feedback" class="nav-link">FEEDBACK</a>
@@ -55,8 +55,15 @@
     </div>
 </div>
 
-<div id="procedure" class="offset">
-    <img src="assets/truck.jpg" alt="Truck Image" width="100%">
+<div id="location-input" class="offset">  
+<div class="landing">
+    <div class="home-wrap">
+        <div class="home-inner">
+            
+        </div>
+    </div>
+</div>
+   <!--  <img src="assets/truck.jpg" alt="Truck Image" width="100%"> -->
 </div>
 <!--  END NAVIGATION -->
 
@@ -70,7 +77,7 @@
             <div class="row">
                 <div class="col col-md-3  col-sm-12 col-xs-12 procedure-container">
                     <div class="img-container">
-                        <img src="assets/wdl-icon1.png" alt="Location" height="60px">
+                        <img src="assets/wdl-icon1.png" alt="Location" height="50px">
                     </div>
                     <div class="text-container">
                         <h5>Enter the Pick-Up & Destination Location</h5>
@@ -78,7 +85,7 @@
                 </div>
                 <div class="col col-md-3  col-sm-12 col-xs-12 procedure-container">
                     <div class="img-container">
-                        <img src="assets/wdl-icon2.png" alt="Location" height="60px">
+                        <img src="assets/wdl-icon2.png" alt="Location" height="50px">
                     </div>
                     <div class="text-container">
                         <h5>Payment</h5>
@@ -86,7 +93,7 @@
                 </div>
                 <div class="col col-md-3 col-sm-12 col-xs-12 procedure-container">
                     <div class="img-container">
-                        <img src="assets/wdl-icon1.png" alt="Location" height="60px">
+                        <img src="assets/wdl-icon1.png" alt="Location" height="50px">
                     </div>
                     <div class="text-container">
                         <h5>Track Your Goods</h5>
@@ -94,7 +101,7 @@
                 </div>
                 <div class="col col-md-3 col-sm-12 col-xs-12 procedure-container">
                     <div class="img-container">
-                        <img src="assets/wdl-icon3.png" alt="Location" height="60px">
+                        <img src="assets/wdl-icon3.png" alt="Location" height="40px">
                     </div>
                     <div class="text-container">
                         <h5>Get Your Goods Delivered</h5>
@@ -164,7 +171,7 @@
 
 
 <!--  COUNTER  -->
-<div id="mobileapp" class="offset" style="background-color:#00ADB5; padding-top: 90px; padding-bottom: 120px;">
+<div id="counter" class="offset" style="background-color:#00ADB5; padding-top: 90px; padding-bottom: 120px;">
     <div class="container">
         <div class="text-center">
             <div class="row" style="color:#222831">
@@ -217,7 +224,7 @@
 
 
 <!--  WEB DEVELOPER  -->
-<div id="developer" class="offset" style="margin-top:50px; margin-bottom: 40px;">
+<div id="developer" class="offset" style="margin-top:50px; padding-bottom: 40px;background-color: #222831">
     <div class="container">
         <div class="text-center">
             <h1 style="font-weight: 700; margin-bottom: 20px; color:#eeee;">Website Developers</h1>
@@ -241,7 +248,7 @@
                         <p>Facebook:: facebook.com/zapywho</p>
                         <p>Github:: @ZapySolo</p>
                         <p>LinkedIN:: https://www.linkedin.com/in/zapywho/</p>          
-                        <p>Website:: @zapy.website.in</p>
+                        <p>Website:: @zapy.website</p>
                     </div>
                 </div>
             </div>
